--- a/.github/workflows/deploy-records.yml
+++ b/.github/workflows/deploy-records.yml
@@ -11,7 +11,7 @@ concurrency:
     cancel-in-progress: false
 
 jobs:
-    check:
+    dns:
         name: DNS
         runs-on: ubuntu-latest
         steps:
