--- a/.github/workflows/raw.yml
+++ b/.github/workflows/raw.yml
@@ -32,4 +32,4 @@ jobs:
                   user-name: github-actions
                   commit-message: "Update Data via free-domains/register"
               env:
-                  API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
+                  API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }}
