--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -4,8 +4,15 @@ on:
     workflow_dispatch: {}
     push:
         branches: [main]
+        paths:
+            - "domains/**/*.json"
+            - "schemas/**/*"
+            - "dnsconfig.js"
     pull_request:
-        tags-ignore: ["**"]
+        paths:
+            - "domains/**/*.json"
+            - "schemas/**/*"
+            - "dnsconfig.js"
 
 concurrency:
     group: ${{ github.ref }}-tests
