--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,3 +15,13 @@ jobs:
               with:
                   repo-token: "${{ secrets.GITHUB_TOKEN }}"
                   sync-labels: true
+    check-star:
+        name: Check Star
+        runs-on: ubuntu-latest
+        steps:
+            - { uses: gacts/is-stargazer@v1, with: { username: "${{ github.event.pull_request.user.login }}" }, id: check-star }
+
+            - if: steps.check-star.outputs.is-stargazer != 'true'
+              uses: actions/github-script@v6
+              with:
+                  script: core.setFailed('⭐ Please star the repository!')
