--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,25 +1,25 @@
 name: Issue
 
 on:
-  issues:
-    types: [opened]
+    issues:
+        types: [opened]
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  comment:
-    name: Comment
-    runs-on: ubuntu-latest
+    comment:
+        name: Comment
+        runs-on: ubuntu-latest
 
     permissions:
-      issues: write
+        issues: write
 
     steps:
-      - uses: actions/checkout@v3
+        - uses: actions/checkout@v3
 
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          body: Thank you for opening an issue, we will respond as soon as possible.
-          issue-number: ${{ github.event.issue.number }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+        - uses: peter-evans/create-or-update-comment@v2
+            with:
+                body: "Thank you for opening an issue, we will respond as soon as possible."
+                issue-number: ${{ github.event.issue.number }}
+                token: ${{ secrets.GITHUB_TOKEN }}
