--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -4,6 +4,7 @@ on:
     push:
         branches: [main]
         paths:
+            - "/.github/workflows/raw-api.yml"
             - "/domains/*.json"
             - "/scripts/raw-api.js"
 
