--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -4,9 +4,9 @@ on:
     push:
         branches: [main]
         paths:
-            - "/.github/workflows/raw-api.yml"
-            - "/domains/*.json"
-            - "/scripts/raw-api.js"
+            - ".github/workflows/raw-api.yml"
+            - "domains/*.json"
+            - "scripts/raw-api.js"
 
 jobs:
     update:
