--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,9 @@ on:
     workflow_dispatch: {}
     push:
         branches: [main]
-        paths: [domains/**, .github/workflows/deploy-records.yml]
+        paths:
+            - domains/
+            - .github/workflows/deploy.yml
 
 concurrency:
     group: ${{ github.ref }}-deploy
@@ -17,12 +19,15 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
-            - uses: gacts/install-dnscontrol@v1
+            - name: Create Credentials File
+              run: echo '{"cloudflare":{"TYPE":"CLOUDFLAREAPI","accountid":"$CF_ID","apitoken":"$CF_TOKEN"}}' > ./dns/creds.json
 
-            - name: Create credentials file
-              run: echo '{"cloudflare":{"TYPE":"CLOUDFLAREAPI","accountid":"$CF_ID","apitoken":"$CF_TOKEN"}}' > ./creds.json
-
-            - run: dnscontrol push
+            - name: Push
+              uses: koenrh/dnscontrol-action@v3
               env:
-                  CF_ID: ${{ secrets.CF_ACCOUNT_ID }}
-                  CF_TOKEN: ${{ secrets.CF_API_TOKEN }}
+                  CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+              with:
+                  args: push
+
+                  config_file: "dns/config.js"
+                  creds_file: "dns/creds.json"
