--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -7,7 +7,7 @@ on:
         paths:
             - "domains/"
             - "schemas/"
-            - "dnsconfig.js"
+            - "dns/config.js"
     pull_request:
 
 concurrency:
@@ -20,8 +20,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: gacts/install-dnscontrol@v1
-            - run: dnscontrol check
+
+            - name: Check
+              uses: koenrh/dnscontrol-action@v3
+              with:
+                  args: check
+                  config_file: "dns/config.js"
 
     json:
         name: JSON
