--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,12 @@ jobs:
             - name: Create creds.json
               run: echo '{"cloudflare":{"TYPE":"CLOUDFLAREAPI","accountid":"$CF_ID","apitoken":"$CF_TOKEN"}}' > ./creds.json
 
+            - run: ls
+
             - name: Push
               uses: koenrh/dnscontrol-action@v3
               env:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
               with:
                   args: push
-
                   config_file: "dns/config.js"
