--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Create creds.json
               run: echo '{"cloudflare":{"TYPE":"CLOUDFLAREAPI","accountid":"$CF_ID","apitoken":"$CF_TOKEN"}}' > ./creds.json
 
-            - run: ls
+            - run: ls dns
 
             - name: Push
               uses: koenrh/dnscontrol-action@v3
@@ -30,4 +30,4 @@ jobs:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
               with:
                   args: push
-                  config_file: "dns/config.js"
+                  config_file: "/dns/config.js"
