--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
             - uses: actions/checkout@v3
 
             - name: Create creds.json
-              run: echo '{"cloudflare":{"TYPE":"CLOUDFLAREAPI","accountid":"$CF_ACCOUNT_ID","apitoken":"$CF_API_TOKEN"}}' > ./creds.json
+              run: echo '{"cloudflare":{"TYPE":"CLOUDFLAREAPI","apitoken":"$CLOUDFLARE_API_TOKEN"}}' > ./creds.json
 
             - name: Push
               uses: koenrh/dnscontrol-action@v3
