--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,6 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
-            - name: Create creds.json
-              run: echo '{"cloudflare":{"TYPE":"CLOUDFLAREAPI","apitoken":"$CLOUDFLARE_API_TOKEN"}}' > ./creds.json
-
             - name: Push
               uses: koenrh/dnscontrol-action@v3
               env:
@@ -29,4 +26,4 @@ jobs:
               with:
                   args: push
                   config_file: 'dns/config.js'
-                  creds_file: 'creds.json'
+                  creds_file: 'dns/creds.json'
