--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,8 @@ on:
     push:
         branches: [main]
         paths:
-            - "domains/"
             - ".github/workflows/deploy.yml"
+            - "domains/"
 
 concurrency:
     group: ${{ github.ref }}-deploy
@@ -19,7 +19,7 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
-            - name: Push
+            - name: Push Records
               uses: koenrh/dnscontrol-action@v3
               env:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
