--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     push:
         branches: [main]
         paths:
-            - "domains/"
+            - "domains/**"
             - ".github/workflows/deploy.yml"
 
 concurrency:
