--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -8,6 +8,7 @@ on:
             - "dns/**"
             - "domains/**"
             - "schemas/**"
+            - ".github/workflows/validation.yml"
     pull_request:
 
 concurrency:
