--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,5 @@ jobs:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
               with:
                   args: push
-                  config_file: "dns/config.js"
+                  config_file: "scripts/dns.js"
                   creds_file: "dns/creds.json"
