--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -7,6 +7,7 @@ on:
             - "domains/*"
             - ".github/workflows/raw-api.yml"
             - "scripts/raw-api.js"
+            - "optout.js"
 
 jobs:
     update:
