--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -5,9 +5,9 @@ on:
     push:
         branches: [main]
         paths:
-            - "dns/**"
             - "domains/**"
             - "schemas/**"
+            - "scripts/dns.js"
     pull_request:
 
 concurrency:
