--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -31,10 +31,25 @@ jobs:
         name: JSON
         runs-on: ubuntu-latest
         steps:
-          - uses: actions/checkout@v2
-          - name: JSON Syntax Check
-            uses: limitusus/json-syntax-check@v1
-            with:
-                pattern: "\\.json$"
-            env:
-                BASE: "domains/"
+            - uses: actions/checkout@v2
+
+            - name: JSON Syntax Check
+              uses: limitusus/json-syntax-check@v1
+              with:
+                  pattern: "\\.json$"
+              env:
+                  BASE: "domains/"
+
+    schemas:
+        name: Schemas
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - uses: walbo/validate-json@v1.1.0
+              with:
+                  schema-version: draft-07
+                  print-valid-files: true
+                  fail-on-missing-schema: true
+                  strict: false
+                  files: ./domains/**/*.json
