--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
                     if [ $? -eq 0 ]
                     then
                       set -e
-                      git commit -m "Prettier"
+                      git commit -m "Run Prettier"
                       git push
                     else
                       set -e
