--- a/.github/workflows/domains.yml
+++ b/.github/workflows/domains.yml
@@ -15,6 +15,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+              with:
+                  token: ${{ secrets.BOT }}
 
             - name: Create ping_results.txt
               run: touch domains/ping_results.txt
