--- a/.github/workflows/domains.yml
+++ b/.github/workflows/domains.yml
@@ -5,6 +5,8 @@ on:
 
     push:
         branches: [main]
+        paths:
+            - ".github/workflows/domains.yml"
 
     schedule:
         - cron: "0 0 * * *"
