--- a/.github/workflows/domains.yml
+++ b/.github/workflows/domains.yml
@@ -22,12 +22,12 @@ jobs:
 
             - name: Create ping_results.txt
               run: |
-                  cd domains
                   touch ping_results.txt
-                  echo "Updated: $(date +'%d/%m/%Y %T')" > ping_results.txt
+                  echo "Updated: $(date +'%d/%m/%Y %T %Z')" > ping_results.txt
 
             - name: Ping Domains
               run: |
+                  cd domains
                   for file in *.json; do
                       if [[ -f $file && ! -d $file ]]; then
                           while read -r line; do
