fix: file location on `git add`

--- a/.github/workflows/domains.yml
+++ b/.github/workflows/domains.yml
@@ -62,6 +62,6 @@ jobs:
               run: |
                   git config --global user.email "bot@freesubdomains.org"
                   git config --global user.name "free-domains-bot"
-                  git add domains/ping_results.txt
+                  git add ping_results.txt
                   git commit -m "Update Ping Results"
                   git push
