--- a/.github/workflows/domains.yml
+++ b/.github/workflows/domains.yml
@@ -7,6 +7,8 @@ on:
         branches: [main]
         paths:
             - ".github/workflows/domains.yml"
+            - "domains/*"
+            - "scripts/ping.js"
 
     schedule:
         - cron: "0 0 * * *"
@@ -20,49 +22,20 @@ jobs:
               with:
                   token: ${{ secrets.BOT }}
 
+            - name: Setup Node
+              uses: actions/setup-node@v2
+              with:
+                  node-version: 16
+
             - name: Create ping_results.txt
               run: |
                   touch ping_results.txt
-                  echo "Updated: $(date +'%d/%m/%Y %T %Z')" > ping_results.txt
+                  echo "Updated: $(date +'%d/%m/%Y %T %Z %z')" >> ping_results.txt
 
-            - name: Ping Domains
-              run: |
-                  cd domains
-                  for file in *.json; do
-                      if [[ -f $file && ! -d $file ]]; then
-                          while read -r line; do
-                              record_type=$(echo "$line" | jq -r 'keys[]')
-                              record_value=$(echo "$line" | jq -r '.[]')
+            - name: Execute Script
+              run: node scripts/ping.js
 
-                              if [[ "$record_type" =~ ^(A|AAAA)$ ]]; then
-                                  IFS=$'\n' read -r -a record_values <<< "$record_value"
-                                  for val in "${record_values[@]}"; do
-                                      ping_result=$(ping -c 1 "$val")
-
-                                      if [[ $? -eq 0 ]]; then
-                                          echo "PASS ${file%.json} $record_type $val"
-                                          echo "PASS ${file%.json} $record_type $val" >> ../ping_results.txt
-                                      else
-                                          echo "FAIL ${file%.json} $record_type $val"
-                                          echo "FAIL ${file%.json} $record_type $val" >> ../ping_results.txt
-                                      fi
-                                  done
-                              elif [[ "$record_type" == "CNAME" ]]; then
-                                  ping_result=$(ping -c 1 "$record_value")
-
-                                  if [[ $? -eq 0 ]]; then
-                                      echo "PASS ${file%.json} $record_type $record_value"
-                                      echo "PASS ${file%.json} $record_type $record_value" >> ../ping_results.txt
-                                  else
-                                      echo "FAIL ${file%.json} $record_type $record_value"
-                                      echo "FAIL ${file%.json} $record_type $record_value" >> ../ping_results.txt
-                                  fi
-                              fi
-                          done < <(jq -c '.records | to_entries[] | {"key": .key, "value": .value}' "$file")
-                      fi
-                  done
-
-            - name: Push Data
+            - name: Commit
               run: |
                   git config --global user.email "bot@freesubdomains.org"
                   git config --global user.name "free-domains-bot"
