--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -1,15 +1,16 @@
 name: Validation
 
 on:
-    workflow_dispatch: {}
+    pull_request:
 
     push:
         branches: [main]
         paths:
             - "domains/**"
+            - ".github/workflows/validation.yml"
             - "scripts/dns.js"
 
-    pull_request:
+    workflow_dispatch:
 
 concurrency:
     group: ${{ github.ref }}-tests
@@ -32,7 +33,7 @@ jobs:
         name: JSON
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
 
             - name: JSON Syntax Check
               uses: limitusus/json-syntax-check@v1
