--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -16,8 +16,14 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+            - uses: actions/checkout@v3
+
+            - uses: actions/checkout@v3
+              with:
+                  repository: free-domains/raw-apj
+                  path: main
+
+            - run: ls
 
             - name: Setup Node
               uses: actions/setup-node@v2
