--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -20,7 +20,7 @@ jobs:
 
             - uses: actions/checkout@v3
               with:
-                  repository: free-domains/raw-apj
+                  repository: free-domains/raw-api
                   path: main
 
             - run: ls
