--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -21,14 +21,13 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   repository: free-domains/raw-api
-                  path: main
+                  path: raw-api
+                  token: ${{ secrets.BOT }}
 
             - name: Setup Node
               uses: actions/setup-node@v2
               with:
                   node-version: 16
-
-            - run: ls main
 
             - name: Execute Script
               run: node scripts/raw-api.js
@@ -36,7 +35,7 @@ jobs:
             - name: Commit
               uses: cpina/github-action-push-to-another-repository@main
               with:
-                  source-directory: "main"
+                  source-directory: "raw-api"
                   destination-github-username: free-domains
                   destination-repository-name: raw-api
                   user-email: bot@freesubdomains.org
