--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -29,8 +29,11 @@ jobs:
               with:
                   node-version: 16
 
-            - name: Execute Script
+            - name: Update Data
               run: node scripts/raw-api.js
+
+            - name: Run Prettier
+              run: npx prettier raw-api/index.json --write --tab-width 4 --print-width 1
 
             - name: Commit
               uses: cpina/github-action-push-to-another-repository@main
