--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -13,7 +13,7 @@ on:
     workflow_dispatch:
 
 concurrency:
-    group: ${{ github.ref }}-tests
+    group: ${{ github.ref }}-validation
     cancel-in-progress: true
 
 jobs:
