feat: add concurrency

--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -9,6 +9,10 @@ on:
 
     workflow_dispatch:
 
+concurrency:
+    group: ${{ github.ref }}-raw-api
+    cancel-in-progress: true
+
 jobs:
     update:
         name: Update
