--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,6 +3,10 @@ name: PR
 on:
     - pull_request_target
 
+concurrency:
+    group: ${{ github.ref }}-pr
+    cancel-in-progress: false
+
 jobs:
     label:
         name: Label
