--- a/.github/workflows/raw-api.yml
+++ b/.github/workflows/raw-api.yml
@@ -27,10 +27,9 @@ jobs:
                   path: raw-api
                   token: ${{ secrets.BOT }}
 
-            - name: Setup Node
-              uses: actions/setup-node@v2
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 16
+                  node-version: latest
 
             - name: Update Data
               run: node raw-api/scripts/update.js
