--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,8 @@ on:
         branches: [main]
         paths:
             - "domains/**"
-            - ".github/workflows/deploy.yml"
+            - ".github/workflows/publish.yml"
+            - "scripts/dns.js"
 
     workflow_dispatch:
 
