--- a/.github/workflows/pr-domains.yml
+++ b/.github/workflows/pr-domains.yml
@@ -52,6 +52,11 @@ jobs:
                       exit 1
                   fi
 
+                  echo "::set-output name=failed_validations::${failed_validations}"
+
+            - name: Log Validations
+              run: echo "${{ steps.email_validation.outputs.failed_validations }}"
+
             - name: Fail Workflow on Validation Failure
               if: ${{ failure() && steps.email_validation.outputs.failed_validations != '' }}
               run: exit 1
