--- a/.github/workflows/pr-domains.yml
+++ b/.github/workflows/pr-domains.yml
@@ -32,8 +32,6 @@ jobs:
             - name: Validate Email
               id: email_validation
               run: |
-                  failed_validations=""
-
                   for file in ${{ steps.find_files.outputs.files }}; do
                       owner_email=$(jq -r '.owner.email' "$file")
 
@@ -41,23 +39,18 @@ jobs:
 
                       if ! email_validation_result=$(wdhdev/validate-email-action@main --email "$owner_email"); then
                           echo "::debug::FAIL $owner_email $file"
-                          failed_validations="${failed_validations}FAIL $owner_email $file\n"
+                          echo "FAIL $owner_email $file" >> failed_validations.txt
                       else
                           echo "::debug::PASS $owner_email $file"
+                          echo "PASS $owner_email $file" >> passed_validations.txt
                       fi
                   done
 
-                  if [[ $failed_validations != "" ]]; then
-                      echo "::error::Email validation failed for the following files:\n${failed_validations}"
+            - name: Fail Workflow on Validation Failure
+              id: check_validations
+              run: |
+                  if [[ -s failed_validations.txt ]]; then
+                      echo "::error::Email validation failed for the following files:"
+                      cat failed_validations.txt
                       exit 1
                   fi
-
-                  echo "::set-output name=failed_validations::${failed_validations}"
-                  echo "${failed_validations}" > failed_validations.txt
-
-            - name: Log Validations
-              run: cat failed_validations.txt
-
-            - name: Fail Workflow on Validation Failure
-              if: ${{ steps.email_validation.outputs.failed_validations != '' }}
-              run: exit 1
