--- a/.github/workflows/pr-domains.yml
+++ b/.github/workflows/pr-domains.yml
@@ -24,38 +24,33 @@ jobs:
 
                   echo "::set-output name=files::$files"
 
-            - name: Retrieve and Validate Emails
+            - name: Retrieve Emails
               id: validate_email
               run: |
                   for file in ${{ steps.find_files.outputs.files }}; do
                       owner_email=$(jq -r '.owner.email' "$file")
 
-                      echo "::debug::Validating email: $owner_email"
                       echo "::set-output name=email::$owner_email"
                       echo "::set-output name=file::$file"
                   done
 
-            - name: Validate Email
+            - name: Validate Emails
               id: email_validation
               run: |
                   for file in ${{ steps.find_files.outputs.files }}; do
                       owner_email=$(jq -r '.owner.email' "$file")
 
-                      echo "Validating email: $owner_email"
-
                       if ! email_validation_result=$(wdhdev/validate-email-action@main --email "$owner_email"); then
-                          echo "::debug::FAIL $owner_email $file"
+                          echo "FAIL $owner_email $file"
                           echo "FAIL $owner_email $file" >> failed_validations.txt
                       else
-                          echo "::debug::PASS $owner_email $file"
+                          echo "PASS $owner_email $file"
                           echo "PASS $owner_email $file" >> passed_validations.txt
                       fi
                   done
 
-            - name: Fail Workflow on Validation Failure
-              id: check_validations
-              run: |
                   if [[ -s failed_validations.txt ]]; then
+                      echo ""
                       echo "::error::Email validation failed for the following files:"
                       cat failed_validations.txt
                       exit 1
