--- a/.github/workflows/pr-domains.yml
+++ b/.github/workflows/pr-domains.yml
@@ -42,7 +42,7 @@ jobs:
                       owner_email=$(jq -r '.owner.email' "$file")
 
                       if ! email_validation_result=$(wdhdev/validate-email-action@main --email "$owner_email"); then
-                          echo "FAIL $owner_email $filename"
+                          echo "::error::FAIL $owner_email $filename"
                           echo "FAIL $owner_email $filename" >> failed_validations.txt
                       else
                           echo "PASS $owner_email $filename"
@@ -51,8 +51,5 @@ jobs:
                   done
 
                   if [[ -s failed_validations.txt ]]; then
-                      echo ""
-                      echo "::error::Email validation failed for the following files:"
-                      cat failed_validations.txt
                       exit 1
                   fi
